force-app/main/default/objects/Account/fields/ControlPIcklist__c.field-meta.xml
<CustomField>
    <fullName>ControlPIcklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ControlPIcklist</label>
    <type>Checkbox</type>
</CustomField>