force-app/main/default/objects/Account/fields/HyperLink__c.field-meta.xml
<CustomField>
    <fullName>HyperLink__c</fullName>
    <formula>if(Name == &#39;Google&#39;, HYPERLINK(&quot;http://google.com&quot;,&#39;google&#39;),&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HyperLink</label>
    <type>Text</type>
</CustomField>