force-app/main/default/objects/Account/fields/isNewCompany__c.field-meta.xml
<CustomField>
    <fullName>isNewCompany__c</fullName>
    <formula>AND(
  OR( TEXT(Active__c)== &#39;Yes&#39;,TEXT(SLA__c) == &#39;Gold&#39;),
 Website ==&#39;google.com&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isNewCompany</label>
    <type>Checkbox</type>
</CustomField>