force-app/main/default/objects/Account/fields/Macroon__c.field-meta.xml
<CustomField>
    <fullName>Macroon__c</fullName>
    <label>Macroon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ingredients</valueSetName>
    </valueSet>
</CustomField>