force-app/main/default/objects/Account/recordTypes/Admin_User.recordType-meta.xml
<RecordType>
    <fullName>Admin_User</fullName>
    <active>true</active>
    <label>Admin User</label>
</RecordType>