force-app/main/default/objects/Account/recordTypes/Standard_User.recordType-meta.xml
<RecordType>
    <fullName>Standard_User</fullName>
    <active>true</active>
    <label>Standard User</label>
</RecordType>